<resources>
    <string name="app_name">MyScheduler</string>
    <string name="action_settings">Settings</string>
    <string name="date_text">日付：</string>
    <string name="title_text">タイトル：</string>
    <string name="detail_text">詳細：</string>
    ￥
    <string name="save_text">保存</string>
    <string name="delete_text">削除</string>
    <string name="service_name">サービス名：</string>
    <string name="money">金額：</string>
    <string name="enn">¥</string>
    <string name="cycle">支払い周期</string>
    <string name="period">支払い周期：</string>
</resources>
